--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,14 @@ project:
   type: website
 
 website:
-  title: "Hannah-sample-blog"
+  title: "Hannah Blog"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/hatttruong
+      # - icon: twitter
+      #   href: https://twitter.com
 format:
   html:
     theme: cosmo
